# lab2_ml

./: config.yaml  download.py  pyproject.toml  train.py
